# multi-person-ai-trip-planner-

./: .env.example  .gitignore  README.md  database_migration.sql  package.json  plan.md  plan_AGENTS.md  plan_PROGRESS.md
.github/workflows/: build.yml  format.yml  linting.yml  tests.yml
agent/: README.md  dev.py  pyproject.toml  test_computation_tools.py  test_data_access_tools.py  test_database.py  test_itinerary_agents.py  test_jwt_middleware.py  test_models.py  test_orchestration.py  test_preference_agents.py  test_recommendation_agents.py  test_validation_agents.py
agent/api/: __init__.py  database.py  main.py
agent/api/middleware/: __init__.py  auth.py
agent/api/models/: README.md  __init__.py  itinerary.py  preferences.py  recommendations.py
agent/api/routers/: __init__.py  ai.py
agent/api/services/: __init__.py  agent_service.py
agent/tripsync/: __init__.py  computation_tools.py  data_access_tools.py  itinerary_agents.py  orchestration.py  preference_agents.py  recommendation_agents.py  validation_agents.py
documents/: PRD.md
documents/stitch_trip_management_dashboard/: tripsync-theme.css
documents/stitch_trip_management_dashboard/ai_loading_state/: code.html
src/: DatabaseDefinitions.ts  app.css  app.html  config.ts
src/lib/components/: AggregatedPreferences.svelte  (+3 more)
supabase/: config.toml
supabase/migrations/: 20240730010101_initial.sql  20260129185646_remote_schema.sql  20260129190000_create_tripsync_tables.sql  20260130000000_fix_trip_members_rls_recursion.sql  20260130000001_allow_viewing_trips_by_invite_code.sql
(+35 files in other folders)
